@@ -21,6 +21,7 @@ Roy Franz <roy.franz@linaro.org>
 Tyler Bell <tyler.bell@hp.com>
 Xie XiuQi <xiexiuqi@huawei.com>
 Petr Oros <poros@redhat.com>
+Ryan Armstrong <ryan@cavaliercoder.com>
 
 MANY THANKS TO (IN CHRONOLOGICAL ORDER)
 Werner Heuser
