@@ -21,6 +21,16 @@
 #define USE_MMAP
 #endif
 
+/* Use memory alignment workaround or not */
+#if defined(__ia64__) || defined(__LP64__)
+#define ALIGNMENT_WORKAROUND
+#endif
+
+/* Use API calls to get SMBIOS data */
+#if defined(__APPLE__) // TODO: || defined(__WIN32)
+#define USE_API_CALLS
+#endif
+
 #if defined(_WIN32)
 #pragma warning(disable: 4996)
 #endif
@@ -28,11 +38,6 @@
 #if defined(_WIN64)
 #define _OFF_T_DEFINED
 typedef unsigned long long off_t;
-#endif
-
-/* Use memory alignment workaround or not */
-#if defined(__ia64__) || defined(__LP64__)
-#define ALIGNMENT_WORKAROUND
 #endif
 
 #endif
